# tangram

./: .gitignore  README.md  pyproject.toml
src/shimoku_tangram/: logging.py
src/shimoku_tangram/ai/: bedrock.py  vertextai.py
src/shimoku_tangram/aws/: s3.py  ssm.py
src/shimoku_tangram/formatting/: dates.py
src/shimoku_tangram/orchestration/: step_functions.py
src/shimoku_tangram/reporting/: logging.py  sentry.py
src/shimoku_tangram/secrets/: gc_secrets_manager.py  secrets_manager.py  ssm.py
src/shimoku_tangram/sentry/: sentry.py
src/shimoku_tangram/storage/: gcs.py  meta_gcs.py  meta_s3.py  s3.py
src/shimoku_tangram/utils/: environment.py
tests/aws/: s3_test.py  ssm_test.py
tests/aws/mocks/: MockS3Client.py  MockSsmClient.py
tests/orchestration/: step_functions_test.py
tests/reporting/: logging_test.py  sentry_test.py
tests/secrets/: secrets_manager_test.py  ssm_test.py
tests/storage/: s3_test.py
